# vatly-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/vatly/: __init__.py  _async_client.py  _base_client.py  _client.py  _config.py  _errors.py  _types.py
src/vatly/_async_resources/: async_vat.py  rates.py  vat.py
src/vatly/_resources/: async_vat.py  rates.py  vat.py
tests/: conftest.py  test_async_client.py  test_async_validate.py  test_async_validate_async.py  test_client.py  test_config.py  test_errors.py  test_rates.py  test_types.py  test_validate.py  test_validate_batch.py
