[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vatly"
dynamic = ["version"]
description = "Official Python SDK for the Vatly VAT validation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Vatly", email = "support@vatly.dev" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://vatly.dev"
Documentation = "https://docs.vatly.dev"
Repository = "https://github.com/getvatly/vatly-python"

[tool.hatch.version]
path = "src/vatly/_version.py"

[tool.black]
line-length = 99
target-version = ["py39"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
